# ComputerGraphicsProject

./: README.md
LavaFlow/: CMakeLists.txt
LavaFlow/shaders/: base.frag  base.vs  light.frag  volcan.frag  volcan.vs  vulcan.vs
LavaFlow/source/: LavaFlow.cpp  MyVertex.h  vertex.h
Particles/: CMakeLists.txt
Particles/include/: Model.h  Shader.h
Particles/model/: part.blend  part.mtl  spotlight.mtl
Particles/shaders/: smallCube.frag  sphere.frag  spotlight.frag
Particles/source/: Particles.cpp
Walking/: CMakeLists.txt
Walking/include/: Camera.h  Geometry.h  Mesh.h
Walking/shaders/: cube.frag  floor.frag  lamp.frag  sphere.frag  texture.vs
Walking/source/: Walking.cpp
